# runner/server/docs/swagger.yaml
@@ -1,25 +1,8 @@
 basePath: /v1
 definitions:
-  handler.ChatCompletionMessage:
-    properties:
-      content: {}
-      role:
-        type: string
-    type: object
   handler.ChatCompletionRequest:
-    properties:
-      messages:
-        items:
-          $ref: '#/definitions/handler.ChatCompletionMessage'
-        type: array
-      model:
-        type: string
-      stream:
-        type: boolean
-      tools:
-        items:
-          $ref: '#/definitions/openai.ChatCompletionToolParam'
-        type: array
+    type: object
+  handler.RerankingRequest:
     type: object
   openai.ChatCompletion:
     properties:
@@ -313,18 +296,6 @@ definitions:
         type: number
       token:
         description: The token.
-        type: string
-    type: object
-  openai.ChatCompletionToolParam:
-    properties:
-      any: {}
-      function:
-        $ref: '#/definitions/shared.FunctionDefinitionParam'
-      type:
-        description: |-
-          The type of the tool. Currently, only `function` is supported.
-
-          This field can be elided, and will marshal its zero value as "function".
         type: string
     type: object
   openai.Completion:
@@ -659,6 +630,91 @@ definitions:
         description: Cached tokens present in the prompt.
         type: integer
     type: object
+  openai.EmbeddingModel:
+    enum:
+    - text-embedding-ada-002
+    - text-embedding-3-small
+    - text-embedding-3-large
+    type: string
+    x-enum-varnames:
+    - EmbeddingModelTextEmbeddingAda002
+    - EmbeddingModelTextEmbedding3Small
+    - EmbeddingModelTextEmbedding3Large
+  openai.EmbeddingNewParams:
+    properties:
+      any: {}
+      dimensions:
+        allOf:
+        - $ref: '#/definitions/param.Opt-int64'
+        description: |-
+          The number of dimensions the resulting output embeddings should have. Only
+          supported in `text-embedding-3` and later models.
+      encoding_format:
+        allOf:
+        - $ref: '#/definitions/openai.EmbeddingNewParamsEncodingFormat'
+        description: |-
+          The format to return the embeddings in. Can be either `float` or
+          [`base64`](https://pypi.org/project/pybase64/).
+
+          Any of "float", "base64".
+      input:
+        allOf:
+        - $ref: '#/definitions/openai.EmbeddingNewParamsInputUnion'
+        description: |-
+          Input text to embed, encoded as a string or array of tokens. To embed multiple
+          inputs in a single request, pass an array of strings or array of token arrays.
+          The input must not exceed the max input tokens for the model (8192 tokens for
+          all embedding models), cannot be an empty string, and any array must be 2048
+          dimensions or less.
+          [Example Python code](https://cookbook.openai.com/examples/how_to_count_tokens_with_tiktoken)
+          for counting tokens. In addition to the per-input token limit, all embedding
+          models enforce a maximum of 300,000 tokens summed across all inputs in a single
+          request.
+      model:
+        allOf:
+        - $ref: '#/definitions/openai.EmbeddingModel'
+        description: |-
+          ID of the model to use. You can use the
+          [List models](https://platform.openai.com/docs/api-reference/models/list) API to
+          see all of your available models, or see our
+          [Model overview](https://platform.openai.com/docs/models) for descriptions of
+          them.
+      user:
+        allOf:
+        - $ref: '#/definitions/param.Opt-string'
+        description: |-
+          A unique identifier representing your end-user, which can help OpenAI to monitor
+          and detect abuse.
+          [Learn more](https://platform.openai.com/docs/guides/safety-best-practices#end-user-ids).
+    type: object
+  openai.EmbeddingNewParamsEncodingFormat:
+    enum:
+    - float
+    - base64
+    type: string
+    x-enum-varnames:
+    - EmbeddingNewParamsEncodingFormatFloat
+    - EmbeddingNewParamsEncodingFormatBase64
+  openai.EmbeddingNewParamsInputUnion:
+    properties:
+      any: {}
+      ofArrayOfStrings:
+        items:
+          type: string
+        type: array
+      ofArrayOfTokenArrays:
+        items:
+          items:
+            type: integer
+          type: array
+        type: array
+      ofArrayOfTokens:
+        items:
+          type: integer
+        type: array
+      ofString:
+        $ref: '#/definitions/param.Opt-string'
+    type: object
   param.Opt-bool:
     properties:
       value:
@@ -678,44 +734,6 @@ definitions:
     properties:
       value:
         type: string
-    type: object
-  shared.FunctionDefinitionParam:
-    properties:
-      any: {}
-      description:
-        allOf:
-        - $ref: '#/definitions/param.Opt-string'
-        description: |-
-          A description of what the function does, used by the model to choose when and
-          how to call the function.
-      name:
-        description: |-
-          The name of the function to be called. Must be a-z, A-Z, 0-9, or contain
-          underscores and dashes, with a maximum length of 64.
-        type: string
-      parameters:
-        allOf:
-        - $ref: '#/definitions/shared.FunctionParameters'
-        description: |-
-          The parameters the functions accepts, described as a JSON Schema object. See the
-          [guide](https://platform.openai.com/docs/guides/function-calling) for examples,
-          and the
-          [JSON Schema reference](https://json-schema.org/understanding-json-schema/) for
-          documentation about the format.
-
-          Omitting `parameters` defines a function with an empty parameter list.
-      strict:
-        allOf:
-        - $ref: '#/definitions/param.Opt-bool'
-        description: |-
-          Whether to enable strict schema adherence when generating the function call. If
-          set to true, the model will follow the exact schema defined in the `parameters`
-          field. Only a subset of JSON Schema is supported when `strict` is `true`. Learn
-          more about Structured Outputs in the
-          [function calling guide](docs/guides/function-calling).
-    type: object
-  shared.FunctionParameters:
-    additionalProperties: {}
     type: object
 info:
   contact: {}
@@ -766,4 +784,32 @@ paths:
           schema:
             $ref: '#/definitions/openai.Completion'
       summary: completion
+  /embeddings:
+    post:
+      consumes:
+      - application/json
+      description: Creates an embedding for the given input.
+      parameters:
+      - description: Embedding request
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/openai.EmbeddingNewParams'
+      responses: {}
+      summary: Creates an embedding for the given input.
+  /reranking:
+    post:
+      consumes:
+      - application/json
+      description: Reranks the given documents for the given query.
+      parameters:
+      - description: Reranking request
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/handler.RerankingRequest'
+      responses: {}
+      summary: Reranks the given documents for the given query.
 swagger: "2.0"
